[gd_scene load_steps=15 format=3 uid="uid://cc1n7p87rdvxe"]

[ext_resource type="Script" path="res://scenes/levels/space.gd" id="1_tw8vm"]
[ext_resource type="PackedScene" uid="uid://d32700hsoxr8b" path="res://scenes/spaceships/humans/nebula.tscn" id="1_xd8lj"]
[ext_resource type="Material" uid="uid://ded4rt8oc2c4l" path="res://scenes/levels/starfield_material.tres" id="2_8jkqp"]
[ext_resource type="PackedScene" uid="uid://bt6ainl0tmfmv" path="res://scenes/vfx/lensflare.tscn" id="2_i61lw"]
[ext_resource type="PackedScene" uid="uid://bvg10su81vhxe" path="res://scenes/ui/settings_panel.tscn" id="2_rvlvr"]
[ext_resource type="PackedScene" uid="uid://drj4drjrrqhtn" path="res://scenes/spaceships/drexuls/kythrax.tscn" id="6_3b8cd"]
[ext_resource type="Shader" path="res://scenes/props/star/star.gdshader" id="6_r70mv"]
[ext_resource type="Material" uid="uid://ynab0ip6e1pg" path="res://scenes/props/gasclouds/gascloud_material.tres" id="8_6o4hr"]
[ext_resource type="PackedScene" uid="uid://dbpepfkxb1b7y" path="res://scenes/props/blackhole/blackhole.tscn" id="9_lin2b"]
[ext_resource type="PackedScene" uid="uid://w68mqe1d4u52" path="res://scenes/props/star/star.tscn" id="10_sjr25"]

[sub_resource type="Sky" id="Sky_lqqcx"]
sky_material = ExtResource("2_8jkqp")

[sub_resource type="Environment" id="Environment_a1d0t"]
background_mode = 2
background_energy_multiplier = 0.15
sky = SubResource("Sky_lqqcx")
ambient_light_source = 3
ambient_light_color = Color(0.229167, 0.229167, 0.229167, 1)
ambient_light_sky_contribution = 0.66
tonemap_mode = 3
ssr_enabled = true
ssao_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
glow_intensity = 0.18
glow_blend_mode = 0
volumetric_fog_enabled = true
volumetric_fog_density = 0.0
volumetric_fog_length = 500.0
volumetric_fog_detail_spread = 2.92817
volumetric_fog_ambient_inject = 0.23

[sub_resource type="LabelSettings" id="LabelSettings_hnl5v"]
line_spacing = -1.845

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhv24"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_r70mv")
shader_parameter/sun_size = 0.028
shader_parameter/sun_brightness = 30.0
shader_parameter/sun_color = Color(1, 0.665405, 0.375608, 1)
shader_parameter/sun_fade = 0.03

[node name="space" type="Node3D"]
script = ExtResource("1_tw8vm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_a1d0t")

[node name="Lensflare" parent="." instance=ExtResource("2_i61lw")]

[node name="Hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="Hud"]
layout_mode = 0
offset_left = 42.0
offset_top = 101.0
offset_right = 163.0
offset_bottom = 205.0
text = "Position:
x: 0
y: 0
z: 0"
label_settings = SubResource("LabelSettings_hnl5v")

[node name="Label2" type="Label" parent="Hud"]
layout_mode = 0
offset_left = 39.0
offset_top = 200.0
offset_right = 160.0
offset_bottom = 304.0
text = "Position:
x: 0
y: 0
z: 0"
label_settings = SubResource("LabelSettings_hnl5v")

[node name="SettingsPanel" parent="Hud" instance=ExtResource("2_rvlvr")]
layout_mode = 1
offset_left = -334.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.440157, -0.488776, -0.753233, -0.525231, -0.820531, 0.225524, -0.728282, 0.296356, -0.617883, -7035.21, 1259.62, -8689.99)
visible = false
light_color = Color(1, 0.901961, 0.792157, 1)
light_energy = 1.69
shadow_enabled = true
shadow_blur = 1.425

[node name="Star" parent="." groups=["space_objects"] instance=ExtResource("10_sjr25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9456.39, 0, -221430)
visible = false
material_override = SubResource("ShaderMaterial_rhv24")
metadata/_edit_group_ = true

[node name="OmniLight3D" type="OmniLight3D" parent="Star"]
light_color = Color(1, 0.980482, 0.907855, 1)
light_energy = 1.5
omni_range = 500000.0
omni_attenuation = 0.03

[node name="Nebula" parent="." groups=["space_objects"] instance=ExtResource("1_xd8lj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.02785, 0, -1.65586)

[node name="Kythrax" parent="." instance=ExtResource("6_3b8cd")]
transform = Transform3D(-0.934832, 0, -0.355091, 0, 1, 0, 0.355091, 0, -0.934832, -131.152, 27.4722, -324.152)

[node name="Kythrax2" parent="." instance=ExtResource("6_3b8cd")]
transform = Transform3D(-0.934832, 0, -0.355091, 0, 1, 0, 0.355091, 0, -0.934832, -185.219, 27.4722, -303.615)

[node name="Kythrax3" parent="." instance=ExtResource("6_3b8cd")]
transform = Transform3D(-0.934832, 0, -0.355091, 0, 1, 0, 0.355091, 0, -0.934832, -154.425, 56.1736, -315.312)

[node name="FogVolume" type="FogVolume" parent="." groups=["space_objects"]]
transform = Transform3D(0.999984, -0.00567229, 0, 0.00567229, 0.999984, 0, 0, 0, 1, 0, 0, -81.0421)
visible = false
size = Vector3(1000, 1000, 1000)
shape = 0
material = ExtResource("8_6o4hr")

[node name="OmniLight3D" type="OmniLight3D" parent="FogVolume"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -84.885, 0, 27.6928)
light_color = Color(1, 0.210923, 0.0961928, 1)
light_energy = 3.374
light_volumetric_fog_energy = 6.5
omni_range = 149.826
omni_attenuation = 0.318

[node name="OmniLight3D2" type="OmniLight3D" parent="FogVolume"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.8694, 41.1642, -201.839)
light_color = Color(1, 0.595573, 0.134335, 1)
light_energy = 9.056
light_volumetric_fog_energy = 9.916
omni_range = 149.826
omni_attenuation = 0.318

[node name="OmniLight3D3" type="OmniLight3D" parent="FogVolume"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -93.577, 101.083, -36.9289)
light_color = Color(0.600289, 1, 0.300143, 1)
light_energy = 9.056
light_volumetric_fog_energy = 6.5
omni_range = 149.826
omni_attenuation = 0.318

[node name="Blackhole" parent="." groups=["space_objects"] instance=ExtResource("9_lin2b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5040.97, -725.145, 1295.48)

[node name="EnemyWave" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="EnemyWave" to="." method="_on_enemy_wave_timeout"]
